# github-link-demo

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  workflow.example.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-check.yml  release.yml
src/workflow_engine/: __init__.py  cli.py  engine.py  models.py  parser.py
tests/: test_cli.py  test_engine.py  test_parser.py
