[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-engine-demo"
version = "0.2.0"
description = "A lightweight DAG workflow engine demo with CLI, tests, lint and GitHub Actions."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "hxy310" }
]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "build>=1.2.1",
  "pyinstaller>=6.10.0"
]

[project.scripts]
workflow-engine = "workflow_engine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=workflow_engine --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
mypy_path = "src"
